Refreshing to latest versions of libraries

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,3 @@
 include 'microserviceA','microserviceB','microservice-consumer','configuration-server','service-registry'
+include 'microserviceZ'
+
