--- a/microservice-consumer/build.gradle
+++ b/microservice-consumer/build.gradle
@@ -1,15 +1,12 @@
+plugins {
+    id 'org.springframework.boot' version '1.5.6.RELEASE'
+}
 
 apply plugin: 'java'
-apply plugin: 'spring-boot'
-apply plugin: 'io.spring.dependency-management'
 
-buildscript {
-    repositories {
-        jcenter()
-    }
-    dependencies {
-        classpath 'org.springframework.boot:spring-boot-gradle-plugin:1.2.3.RELEASE'
-        classpath 'io.spring.gradle:dependency-management-plugin:0.4.0.RELEASE'
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:Dalston.RELEASE"
     }
 }
 
@@ -17,17 +14,10 @@ repositories {
     jcenter()
 }
 
-dependencyManagement {
-    imports {
-        mavenBom 'io.spring.platform:platform-bom:1.1.2.RELEASE'
-        mavenBom 'org.springframework.cloud:spring-cloud-starter-parent:1.0.0.RELEASE'
-    }
-}
-
 dependencies {
-    compile 'org.springframework.data:spring-data-jpa:1.8.0.RELEASE'
-    compile 'org.springframework.integration:spring-integration-http:4.1.3.RELEASE'
-    compile 'org.springframework.integration:spring-integration-core:4.1.3.RELEASE'
+    compile 'org.springframework.data:spring-data-jpa'
+    compile 'org.springframework.integration:spring-integration-http'
+    compile 'org.springframework.integration:spring-integration-core'
     compile 'org.springframework.cloud:spring-cloud-starter-eureka'
     compile 'org.springframework.boot:spring-boot-starter-web'
 
