--- a/service-registry/build.gradle
+++ b/service-registry/build.gradle
@@ -1,27 +1,17 @@
+plugins {
+    id 'org.springframework.boot' version '1.5.6.RELEASE'
+}
 
 apply plugin: 'java'
-apply plugin: 'spring-boot'
-apply plugin: 'io.spring.dependency-management'
 
-
-buildscript {
-    repositories {
-        jcenter()
-    }
-    dependencies {
-        classpath 'org.springframework.boot:spring-boot-gradle-plugin:1.2.3.RELEASE'
-        classpath 'io.spring.gradle:dependency-management-plugin:0.4.0.RELEASE'
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:Dalston.RELEASE"
     }
 }
 
 repositories {
     jcenter()
-}
-
-dependencyManagement {
-    imports {
-        mavenBom 'org.springframework.cloud:spring-cloud-starter-parent:1.0.0.RELEASE'
-    }
 }
 
 dependencies {
